:bug: Fixed z-index to prevent overlapping issues

--- a/src/Appl/AppHeader/AppHeader.scss
+++ b/src/Appl/AppHeader/AppHeader.scss
@@ -10,6 +10,7 @@
     height: 2.5em;
     padding: 5px 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    z-index: 2;
 
     &--Title {
       user-select: none;
